style fix: z-index

--- a/client/src/components/boardStatus/boardStatus.module.scss
+++ b/client/src/components/boardStatus/boardStatus.module.scss
@@ -30,6 +30,7 @@
   margin-top: 0.9em;
   max-width: 20em;
   width: 100vw;
+  z-index: 1;
 }
 
 .dropdownHeading {
